[package]
name = "print-swc-ast"
version = "0.1.0"
authors = ["Liam Murphy <liampm32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
swc_ecmascript = { version = "0.18.1", features = ["parser"] }
swc_common = "0.10.9"
anyhow = "1.0.38"
